# design-thinking

./: .gitignore
backend/: app.py  pyproject.toml  requirements.txt
backend/models/: diabetes_model.pkl  heart_model.pkl  lung_model.pkl
backend/utils/: __init__.py  runtime_helpers.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  LanguageContext.jsx  config.js  index.css  main.jsx
frontend/src/components/: HealthChat.jsx  Quiz.jsx  heatmap_file.jsx  questions.js
frontend/src/i18n/: bn.js  en.js  hi.js  index.js  mr.js  ta.js  te.js
frontend/src/pages/: BlogPage.jsx  BookingPage.jsx  ChatPage.jsx  DailyTracker.jsx  LoginPage.jsx  MentalCheckupPage.jsx  MentalHealth.jsx  ProfilePage.jsx  ServicesPage.jsx  WellnessDashboard.jsx  WellnessPage.jsx
frontend/src/styles/: dashboard.css  health-chat.css  onboarding.css  quiz.css  wellness-pages.css
scripts/: OpenAitest.py  check_accuracy.py  direct_test.py  test_ocr.py  train_models.py
